Add FUN guessing game

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <main role="main" class="inner cover">
       <h1 class="cover-heading text-white mt-5">Tervetuloa sivulleni!</h1>
       <p class="lead text-white mt-3">Täällä näet tekemiäni ohjelmointiprojekteja sekä lisätietoja minusta.</p>
-     
+      <a href="/arvauspeli/" class="btn btn-lg btn-light text-white">Älä ainakaan kokeile tätä</a>
     </main>
 
     <footer class="mastfoot mt-auto text-white">
