refine arvauspeli js logic

--- a/arvauspeli/index.html
+++ b/arvauspeli/index.html
@@ -62,7 +62,7 @@
       <h1 class="cover-heading text-white mt-5">TOSI KIVA arvauspeli tietokonetta vastaan</h1>
       <section class="bg-light rounded">
         <h2 class="mt-5 pt-3">Säännöt</h2>
-        <p>Arvaa numero 0  tai 1. Tietokone arvaa myös. Jos sinun ja tietokoneen numerot ovat eri, voitat. Jos ne ovat samat, tietokone voittaa. Mutta ethän sinä nyt ylisuurelle laskukoneelle häviäisi..</p>
+        <p>Arvaa numero 0  tai 1. Tietokone arvaa myös. Jos sinun ja tietokoneen numerot ovat eri, voitat. Jos ne ovat samat, tietokone voittaa. Tietokoneen arvaukset perustuvat sinun lyhyen aikavälin arvauskäyttäytymiseesi.</p>
         <h3>Valitse tässä</h3>
             <button class="btn btn-success" id="zero-btn"> 0 </button> 
           <button class="btn btn-success" id="one-btn"> 1 </button>
