fix header link to not active

--- a/arvauspeli/index.html
+++ b/arvauspeli/index.html
@@ -50,7 +50,7 @@
         <h3 class="masthead-brand text-white">Ohjelmointiprojektit</h3>
         <nav class="nav nav-masthead justify-content-center">
           <a class="nav-link" href="../index.html">Alkuun</a>
-          <a class="nav-link active" href="#">Minusta</a>
+          <a class="nav-link" href="/minusta/">Minusta</a>
           <a class="nav-link" href="/projektit/">Projektit</a>
           
         
