--- a/index.html
+++ b/index.html
@@ -62,13 +62,12 @@
     <main role="main" class="inner cover">
       <h1 class="cover-heading text-white mt-5">Tervetuloa sivulleni!</h1>
       <p class="lead text-white mt-3">Täällä näet tekemiäni ohjelmointiprojekteja sekä lisätietoja minusta.</p>
-      <a href="/arvauspeli/" class="btn btn-lg btn-light text-white">Älä ainakaan kokeile tätä</a>
+     
     </main>
 
     <footer class="mastfoot mt-auto text-white">
       <div class="inner">
-        <p class="a-white footer-text"> Käytin tähän sivuun <a
-          class="a-white footer-text" href="https://twitter.com/mdo">@mdo</a>:n suunnittelemaa <a class="a-white footer-text" href="https://getbootstrap.com/">Bootstrap</a>-mallia -Anu</p>
+        <p class="a-white footer-text"> Sivu ja kuvat: Anu Virtanen 2021</p>
       </div>
     </footer>
   </div>
