--- a/minusta/index.html
+++ b/minusta/index.html
@@ -66,6 +66,12 @@
       </p>
       <ul>
         <li class="text-white">
+          <a href="https://tikape.mooc.fi/kevat-2021/index" class="a-white">Tietokantojen perusteet </a>(Helsingin Yliopisto, MOOC, kevät 2021)
+         </li>
+        <li class="text-white">
+          <a href="https://fitech.io/en/studies/tietoturva-oulu/" class="a-white">Tietoturva </a>(Oulun Yliopisto, kevät 2021)
+         </li>
+        <li class="text-white">
           <a href="https://ohjelmointi-20.mooc.fi/" class="a-white">Java-ohjelmoinnin perus- ja jatkokurssi </a>(Helsingin Yliopisto, MOOC, kevät - syksy 2020)
          </li>
         <li class="text-white">
