change project page layout

--- a/projektit/index.html
+++ b/projektit/index.html
@@ -59,7 +59,7 @@
     </header>
 
     <main role="main" class="inner cover">
-      <section class="project-bg">
+      <section class="project-bg p-3">
         
 
       <h1 class="cover-heading text-white mt-5">Angular</h1>
