--- a/projektit/index.html
+++ b/projektit/index.html
@@ -79,9 +79,9 @@
           </li>
           
           <li>
-              <a href="https://astmalaakelaskuri.azurewebsites.net/" class="a-white">Single page webapp: Astmalääkelaskuri</a>
+              <a href="https://astmalaskuri.web.app/" class="a-white">Single page webapp: Astmalääkelaskuri</a>
               <details class="lead text-white"> <summary>Kuvaus</summary>
-                <p class="lead text-white">Yhteinen full stack -projekti <a href="https://sirene-karri-portfolio.web.app/" class="a-white">Sirenen</a> kanssa. Palvelin ja Asp.net Corella tehty API sekä Angular-frontend, joilla helpotetaan Sirenen kissan astmalääkkeiden käytön seurantaa. Palvelin, API ja käyttöliittymä hostattu Azureen. <a href="https://sirene-karri-portfolio.web.app/" class="a-white">Sirene</a> teki backendin, minä frontendin, ja ongelmakohtia pohdittiin yhdessä.</p>
+                <p class="lead text-white">Yhteinen full stack -projekti <a href="https://sirene-karri-portfolio.web.app/" class="a-white">Sirenen</a> kanssa. Palvelin ja Asp.net Corella tehty API sekä Angular-frontend, joilla helpotetaan Sirenen kissan astmalääkkeiden käytön seurantaa. Palvelin ja API hostattu Azureen. Käyttöliittymä Firebasessa. <a href="https://sirene-karri-portfolio.web.app/" class="a-white">Sirene</a> teki backendin, minä frontendin, ja ongelmakohtia pohdittiin yhdessä.</p>
               </details>
           </li>
         
