change footer of arvauspeli

--- a/arvauspeli/index.html
+++ b/arvauspeli/index.html
@@ -91,8 +91,7 @@
 
     <footer class="mastfoot mt-auto text-white">
       <div class="inner">
-        <p class="a-white footer-text"> Käytin tähän sivuun <a
-          class=" footer-text a-white" href="https://twitter.com/mdo">@mdo</a>:n suunnittelemaa <a class="a-white footer-text" href="https://getbootstrap.com/">Bootstrap</a>-mallia -Anu</p>
+        <p class="a-white footer-text">Sivu: Anu Virtanen 2021</p>
       </div>
     </footer>
   </div>
