--- a/arvauspeli/index.html
+++ b/arvauspeli/index.html
@@ -91,7 +91,7 @@
 
     <footer class="mastfoot mt-auto text-white">
       <div class="inner">
-        <p class="a-white footer-text">Sivu: Anu Virtanen 2021</p>
+        <p class="a-white footer-text">Sivu ja ohjelma: Anu Virtanen 2021</p>
       </div>
     </footer>
   </div>
