remove broken astmalääkelaskuri

--- a/projektit/index.html
+++ b/projektit/index.html
@@ -77,17 +77,11 @@
                 <p class="lead text-white">Oma hassutteluprojekti, jossa harjoittelen Angular-kehitystä. Sisältö ja idea kuvaa etäopiskelutunnelmia. Olen tässä kokeillut, millä tavalla saan toteutettua eri ideoita. Esillä versio, joka ei ole "valmis", vaan kehitän projektia viikoittain. <a href="https://github.com/anuvirtane/etabingo" class="a-white">Tästä Githubiin katsomaan tiedostoja.</a></p>
               </details>
           </li>
-          
+        
           <li>
-              <a href="https://astmalaskuri.web.app/" class="a-white">Single page webapp: Astmalääkelaskuri yhdelle käyttäjälle</a>
+              <a href="https://astmalaakelaskuri.web.app/" class="a-white">Single page webapp: Astmalääkelaskuri</a>
               <details class="lead text-white"> <summary>Kuvaus</summary>
-                <p class="lead text-white">Yhteinen full stack -projekti <a href="https://sirene-karri-portfolio.web.app/" class="a-white">Sirenen</a> kanssa. SQL-tietokantapalvelin ja Asp.net Corella tehty API sekä Angular-frontend, joilla helpotetaan Sirenen kissan astmalääkkeiden käytön seurantaa. Tietokanta ja API hostattu Azureen, käyttöliittymä Firebaseen. <a href="https://sirene-karri-portfolio.web.app/" class="a-white">Sirene</a> teki backendin, minä enemmän frontendia, ja ongelmakohtia pohdittiin yhdessä.</p>
-              </details>
-          </li>
-          <li>
-              <a href="https://astmalaakelaskuri.web.app/" class="a-white">Astmalääkelaskuri sisäänkirjautumisominaisuudella</a>
-              <details class="lead text-white"> <summary>Kuvaus</summary>
-                <p class="lead text-white">Usean käyttäjän astmalääkelaskuri, kehitetty yhdessä <a href="https://sirene-karri-portfolio.web.app/" class="a-white">Sirenen</a> kanssa. Jos haluat testata rekisteröimättä omaa käyttäjätunnusta, voit kokeilla näillä tunnuksilla: <br>
+                <p class="lead text-white">Astmalääkelaskuri, kehitetty yhdessä <a href="https://sirene-karri-portfolio.web.app/" class="a-white">Sirenen</a> kanssa. SQL-tietokantapalvelin ja Asp.net Corella tehty API sekä Angular-frontend. Ajatus on pysyä ajan tasalla siitä, paljonko astmalääkkeitä on jäljellä (lääkepakkaus ei kerro). Tietokanta ja API hostattu Azureen, käyttöliittymä Firebaseen.  Jos haluat testata rekisteröimättä omaa käyttäjätunnusta, voit kokeilla näillä tunnuksilla: <br>
                 käyttäjätunnus: bob
               <br>
               salasana: Pa$$w0rd
