add github repo to astmalaskuri

--- a/projektit/index.html
+++ b/projektit/index.html
@@ -85,6 +85,8 @@
                 käyttäjätunnus: bob
               <br>
               salasana: Pa$$w0rd
+              <br>
+              <a href="https://github.com/anuvirtane/astmalaakelaskuri" class="a-white">Tästä Githubiin katsomaan tiedostoja.</a>
             </p>
               
               </details>
